--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weibo VIP</title>
   <!-- <script src="https://cdn.tailwindcss.com"></script> -->
-   <link href="public/main.css" rel="stylesheet">
+   <link href="main.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
 
@@ -30,6 +30,6 @@
     <img id="modalImage" class="max-w-full max-h-full rounded-lg m-auto" src="" alt="大图">
   </div>
 
-  <script src="/public/scripts.js"></script>
+  <script src="scripts.js"></script>
 </body>
 </html>
